--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,13 @@
-//
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+
+// Variables
+@import 'variables';
+
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
+
+
+.user-drop-info {
+    background: rgba(255, 255, 255, 0.5);
+}
