--- a/public/css/library.css
+++ b/public/css/library.css
@@ -1,5 +1,9 @@
 /* stylelint-disable selector-list-comma-newline-after */
 
+.genres > .active {
+    font-weight: bold;
+}
+
 .blog-header {
     line-height: 1;
     border-bottom: 1px solid #e5e5e5;
@@ -67,9 +71,14 @@ h1, h2, h3, h4, h5, h6 {
     flex: 0 0 auto;
 }
 
+.preview-field {
+    height: 350px;
+    background-color: #000000;
+}
+
 .h-250 { height: 250px; }
 @media (min-width: 768px) {
-    .h-md-250 { height: 250px; }
+    .h-md-250 { height: 600px; }
 }
 
 /* Pagination */
